--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "transform": {
       "^.+\\.ts$": "ts-jest"
     },
-    "testRegex": "(/test/.*|(\\.|/)(test|spec))\\.test.ts$",
+    "testRegex": "/test/.*-test.ts$",
     "moduleFileExtensions": [
       "ts",
       "js"
@@ -57,7 +57,7 @@
   "homepage": "https://github.com/rubensworks/jbr.js#readme",
   "license": "MIT",
   "bin": {
-    "jbr": "bin/jbr.js"
+    "jbr": "bin/jbs"
   },
   "files": [
     "bin/**/*.d.ts",
@@ -69,8 +69,8 @@
     "index.ts"
   ],
   "dependencies": {
-    "@types/minimist": "^1.2.0",
-    "minimist": "^1.2.5"
+    "@types/yargs": "^16.0.1",
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "@rubensworks/eslint-config": "^1.0.1",
