--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,10 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "include": [
-    "index.ts",
-    "lib/**/*.ts",
-    "test/**/*.ts",
-    "bin/**/*.ts"
+    "packages/**/*.ts"
   ],
   "exclude": [
     "**/node_modules"
