--- a/packages/jbr/package.json
+++ b/packages/jbr/package.json
@@ -69,6 +69,7 @@
     "cross-spawn": "^7.0.3",
     "fs-extra": "^10.0.0",
     "ora": "^5.4.0",
+    "winston": "^3.3.3",
     "yargs": "^16.2.0"
   }
 }
