--- a/packages/jbr/package.json
+++ b/packages/jbr/package.json
@@ -62,11 +62,13 @@
   "dependencies": {
     "@types/cli-progress": "^3.9.1",
     "@types/cross-spawn": "^6.0.2",
+    "@types/dockerode": "^3.2.3",
     "@types/fs-extra": "^9.0.11",
     "@types/yargs": "^16.0.1",
     "cli-progress": "^3.9.0",
     "componentsjs": "^4.2.0",
     "cross-spawn": "^7.0.3",
+    "dockerode": "^3.3.0",
     "fs-extra": "^10.0.0",
     "ora": "^5.4.0",
     "winston": "^3.3.3",
