--- a/package.json
+++ b/package.json
@@ -51,12 +51,8 @@
     "lint": "eslint . --ext .ts --cache",
     "clean": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules",
     "postinstall": "yarn run build && lerna run prepare",
-    "version": "manual-git-changelog onversion"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run build && npm run lint && npm run test"
-    }
+    "version": "manual-git-changelog onversion",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@rubensworks/eslint-config": "^1.0.1",
@@ -79,6 +75,7 @@
     "jest-extended": "^0.11.2",
     "lerna": "^4.0.0",
     "manual-git-changelog": "^1.0.1",
+    "streamify-string": "^1.0.1",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
   },
