--- a/.componentsignore
+++ b/.componentsignore
@@ -1,5 +1,7 @@
 [
   "Error",
   "ExperimentLoader",
-  "DockerContainerHandler"
+  "DockerContainerCreator",
+  "DockerContainerHandler",
+  "DockerImageBuilder"
 ]
