--- a/packages/hook-sparql-endpoint-comunica/package.json
+++ b/packages/hook-sparql-endpoint-comunica/package.json
@@ -34,7 +34,7 @@
   "jest": {
     "globals": {
       "ts-jest": {
-        "tsConfig": "../../tsconfig.json"
+        "tsconfig": "../../tsconfig.json"
       }
     },
     "transform": {
