Properly handle Docker container cleanup on abnormal exits

--- a/.componentsignore
+++ b/.componentsignore
@@ -3,5 +3,6 @@
   "ExperimentLoader",
   "DockerContainerCreator",
   "DockerContainerHandler",
-  "DockerImageBuilder"
+  "DockerImageBuilder",
+  "ITaskContext"
 ]
