Restore test coverage of TaskSetHook

--- a/.componentsignore
+++ b/.componentsignore
@@ -3,6 +3,8 @@
   "ExperimentLoader",
   "DockerContainerCreator",
   "DockerContainerHandler",
+  "DockerNetworkCreator",
+  "DockerNetworkHandler",
   "DockerImageBuilder",
   "DockerImagePuller",
   "ITaskContext"
