--- a/packages/experiment-ldbc-snb-decentralized/package.json
+++ b/packages/experiment-ldbc-snb-decentralized/package.json
@@ -11,6 +11,9 @@
     "url": "https://github.com/rubensworks/jbr.js.git",
     "directory": "packages/experiment-ldbc-snb-decentralized"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "bugs": {
     "url": "https://github.com/rubensworks/jbr.js/issues"
   },
