--- a/packages/hook-sparql-endpoint-ldf/lib/templates/input/nginx.conf
+++ b/packages/hook-sparql-endpoint-ldf/lib/templates/input/nginx.conf
@@ -56,6 +56,6 @@ http {
     # Virtual Host Configs
     ##
 
-    #include /etc/nginx/sites-enabled/*;
-    include /etc/nginx/conf.d/*.conf;
+    #include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
