--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,3 +59,32 @@ jobs:
         with:
           github-token: ${{ secrets.github_token }}
           parallel-finished: true
+
+  docs:
+    needs:
+      - test
+      - lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: Load cache
+        uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-docs-modules-v1-${{ hashFiles('**/yarn.lock') }}
+      - name: Install dependencies
+        run: yarn install --pure-lockfile
+      - name: Build docs
+        run: yarn run doc
+      - name: Deploy TSDoc to GitHub Pages
+        if: startsWith(github.ref, 'refs/heads/master')
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: documentation
+          clean: true
