Fix .gitignore not being available in template files

--- a/packages/jbr/package.json
+++ b/packages/jbr/package.json
@@ -36,6 +36,7 @@
     "lib/**/*.js",
     "lib/**/*.json",
     "lib/templates",
+    "lib/templates/.gitignore",
     "index.d.ts",
     "index.ts",
     "components"
