Update to Components.js 5

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "test-changed": "lerna run test --since HEAD",
     "build-changed": "lerna run build --since HEAD",
     "build": "npm run build:ts && npm run build:components",
-    "build:components": "lerna run build:components-core && lerna run build:components",
     "build:ts": "tsc",
+    "build:components": "componentsjs-generator packages/*",
     "build-watch": "tsc --watch",
     "publish": "yarn run build",
     "publish-release": "lerna publish",
@@ -59,7 +59,7 @@
     "@types/node": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "componentsjs-generator": "^2.4.0",
+    "componentsjs-generator": "^3.0.4",
     "eslint": "^7.9.0",
     "eslint-config-es": "3.23.0",
     "eslint-import-resolver-typescript": "^2.3.0",
