--- a/packages/hook-sparql-endpoint-comunica/lib/templates/input/config-client.json
+++ b/packages/hook-sparql-endpoint-comunica/lib/templates/input/config-client.json
@@ -1,7 +1,7 @@
 {
   "@context": [
-    "https://linkedsoftwaredependencies.org/bundles/npm/componentsjs/^4.0.0/components/context.jsonld",
-    "https://linkedsoftwaredependencies.org/bundles/npm/@comunica/runner/^1.0.0/components/context.jsonld"
+    "https://linkedsoftwaredependencies.org/bundles/npm/componentsjs/^5.0.0/components/context.jsonld",
+    "https://linkedsoftwaredependencies.org/bundles/npm/@comunica/runner/^2.0.0/components/context.jsonld"
   ],
-  "import": "npmd:@comunica/actor-init-sparql/^1.0.0/config/config-default.json"
+  "import": "npmd:@comunica/query-sparql/^2.0.0/config/config-default.json"
 }
