--- a/packages/hook-sparql-endpoint-comunica/lib/templates/input/config-client.json
+++ b/packages/hook-sparql-endpoint-comunica/lib/templates/input/config-client.json
@@ -1,7 +1,8 @@
 {
   "@context": [
-    "https://linkedsoftwaredependencies.org/bundles/npm/componentsjs/^5.0.0/components/context.jsonld",
-    "https://linkedsoftwaredependencies.org/bundles/npm/@comunica/runner/^2.0.0/components/context.jsonld"
+    "https://linkedsoftwaredependencies.org/bundles/npm/@comunica/config-query-sparql/^2.0.0/components/context.jsonld"
   ],
-  "import": "npmd:@comunica/query-sparql/^2.0.0/config/config-default.json"
+  "import": [
+    "ccqs:config/config-default.json"
+  ]
 }
