Add missing CHANGELOG entry for v2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "repository": "https://github.com/rubensworks/jbr/",
+  "repository": "https://github.com/rubensworks/jbr.js/",
   "workspaces": [
     "packages/*"
   ],
