Add .keep files in combinations init directories

--- a/packages/jbr/lib/templates/.gitignore
+++ b/packages/jbr/lib/templates/.gitignore
@@ -5,4 +5,6 @@
 /output/*
 !/output/.keep
 /combinations/*/generated
+!/combinations/*/generated/.keep
 /combinations/*/output
+!/combinations/*/output/.keep
