Fix .keep files not being included in combinations generated and output dirs

--- a/packages/jbr/lib/templates/.gitignore
+++ b/packages/jbr/lib/templates/.gitignore
@@ -4,7 +4,7 @@
 !/generated/.keep
 /output/*
 !/output/.keep
-/combinations/*/generated
+/combinations/*/generated/*
 !/combinations/*/generated/.keep
-/combinations/*/output
+/combinations/*/output/*
 !/combinations/*/output/.keep
