--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "doc": "typedoc"
   },
   "devDependencies": {
-    "@rubensworks/eslint-config": "^1.0.1",
+    "@rubensworks/eslint-config": "1.0.1",
+    "@strictsoftware/typedoc-plugin-monorepo": "^0.4.2",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -77,7 +78,6 @@
     "streamify-string": "^1.0.1",
     "ts-jest": "^29.0.0",
     "typedoc": "^0.21.0",
-    "@strictsoftware/typedoc-plugin-monorepo": "^0.4.2",
     "typescript": "^4.0.5"
   },
   "pre-commit": [
