Fix versioning issues, update workflow to reflect new node requirements

--- a/packages/jbr/package.json
+++ b/packages/jbr/package.json
@@ -19,9 +19,7 @@
   },
   "homepage": "https://github.com/rubensworks/jbr.js#readme",
   "license": "MIT",
-  "bin": {
-    "jbr": "bin/jbr"
-  },
+  "bin": "bin/jbr",
   "keywords": [
     "jbr",
     "just a benchmark runner",
@@ -72,6 +70,7 @@
     "@types/yargs": "^17.0.0",
     "cli-progress": "^3.9.0",
     "componentsjs": "^5.2.0",
+    "cross-fetch": "^4.0.0",
     "cross-spawn": "^7.0.3",
     "dockerode": "^3.3.0",
     "fs-extra": "^10.0.0",
