--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
           key: ${{ runner.os }}-lint-modules-${{ hashFiles('**/yarn.lock') }}
       - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
-      - run: yarn install
+          node-version: 18.x
+      - run: yarn install --ignore-engines 
       - run: yarn run lint
 
   test:
@@ -22,8 +22,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node-version:
-          - 14.x
-          - 16.x
+          - 18.x
+          - 20.x
     steps:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
@@ -38,7 +38,7 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-test-modules-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --ignore-engines 
       - name: Build project
         run: yarn run build
       - name: Run tests
@@ -69,7 +69,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '18.x'
       - name: Check out repository
         uses: actions/checkout@v2
       - name: Load cache
@@ -78,7 +78,7 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-docs-modules-v1-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies
-        run: yarn install --pure-lockfile
+        run: yarn install --ignore-engines  --pure-lockfile
       - name: Build docs
         run: yarn run doc
       - name: Deploy TSDoc to GitHub Pages
