--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "packages/*"
   ],
   "engines": {
-    "node": ">=14.0"
+    "node": ">=18.0"
   },
   "jest": {
     "transform": {
@@ -45,7 +45,7 @@
     "publish-release": "lerna publish",
     "publish-bare": "lerna exec -- npm publish --silent",
     "publish-canary": "yarn run build && lerna version prerelease --preid alpha.$(git rev-parse --short HEAD) --ignore-scripts --force-publish --no-push --no-git-tag-version --yes && git update-index --assume-unchanged $(git ls-files | tr '\\n' ' ') && lerna publish from-package --no-git-reset --pre-dist-tag next --force-publish --no-push --no-git-tag-version --yes && git update-index --no-assume-unchanged $(git ls-files | tr '\\n' ' ') && git checkout .",
-    "test": "jest ${1}",
+    "test": "jest",
     "test-ci": "jest --ci --maxWorkers=4 --coverage",
     "lint": "eslint . --ext .ts --cache",
     "clean": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules",
@@ -55,7 +55,9 @@
     "doc": "typedoc"
   },
   "devDependencies": {
-    "@rubensworks/eslint-config": "^1.0.1",
+    "@lerna/project": "^6.4.1",
+    "@rubensworks/eslint-config": "1.0.1",
+    "@strictsoftware/typedoc-plugin-monorepo": "^0.4.2",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -77,7 +79,6 @@
     "streamify-string": "^1.0.1",
     "ts-jest": "^29.0.0",
     "typedoc": "^0.21.0",
-    "@strictsoftware/typedoc-plugin-monorepo": "^0.4.2",
     "typescript": "^4.0.5"
   },
   "pre-commit": [
