--- a/packages/jbr/package.json
+++ b/packages/jbr/package.json
@@ -68,6 +68,7 @@
     "@types/fs-extra": "^9.0.11",
     "@types/tar": "^4.0.5",
     "@types/yargs": "^17.0.0",
+    "@types/semver": "^7.5.4",
     "cli-progress": "^3.9.0",
     "componentsjs": "^5.2.0",
     "cross-fetch": "^4.0.0",
