--- a/packages/jbr/package.json
+++ b/packages/jbr/package.json
@@ -76,6 +76,7 @@
     "dockerode": "^3.3.0",
     "fs-extra": "^10.0.0",
     "ora": "^5.4.0",
+    "semver": "^7.5.4",
     "tar": "^6.1.7",
     "winston": "^3.3.3",
     "yargs": "^17.0.0"
