Add CLI-based hook

--- a/.componentsjs-generator-config.json
+++ b/.componentsjs-generator-config.json
@@ -9,6 +9,8 @@
     "DockerNetworkHandler",
     "DockerImageBuilder",
     "DockerImagePuller",
-    "ITaskContext"
+    "ITaskContext",
+    "ChildProcess",
+    "Set"
   ]
 }
