--- a/packages/jbr/package.json
+++ b/packages/jbr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jbr",
-  "version": "3.0.2",
+  "version": "4.0.0",
   "description": "Just a Benchmark Runner",
   "main": "index.js",
   "typings": "index",
@@ -66,10 +66,10 @@
     "@types/cross-spawn": "^6.0.2",
     "@types/dockerode": "^3.2.3",
     "@types/fs-extra": "^9.0.11",
+    "@types/pidusage": "^2.0.5",
     "@types/semver": "^7.5.1",
     "@types/tar": "^4.0.5",
     "@types/yargs": "^17.0.0",
-    "@types/pidusage": "^2.0.5",
     "cli-progress": "^3.9.0",
     "componentsjs": "^6.0.1",
     "cross-fetch": "^4.0.0",
@@ -77,11 +77,11 @@
     "dockerode": "^3.3.0",
     "fs-extra": "^10.0.0",
     "ora": "^5.4.0",
+    "pidusage": "^3.0.2",
     "semver": "^7.5.4",
     "tar": "^6.1.7",
     "winston": "^3.3.3",
-    "yargs": "^17.0.0",
-    "pidusage": "^3.0.2"
+    "yargs": "^17.0.0"
   },
   "engines": {
     "node": ">=14.0"
