--- a/packages/experiment-sparql-custom/package.json
+++ b/packages/experiment-sparql-custom/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@jbr-experiment/solidbench",
+  "name": "@jbr-experiment/sparql-custom",
   "version": "5.2.0",
-  "description": "SolidBench experiment handler for JBR",
+  "description": "Experiment handler with custom SPARQL queries for JBR",
   "main": "index.js",
   "typings": "index",
   "lsd:module": true,
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/rubensworks/jbr.js.git",
-    "directory": "packages/experiment-solidbench"
+    "directory": "packages/experiment-sparql-custom"
   },
   "publishConfig": {
     "access": "public"
@@ -21,10 +21,7 @@
   "license": "MIT",
   "keywords": [
     "experiment",
-    "solid",
-    "benchmark",
-    "solidbench",
-    "social network",
+    "sparql-custom",
     "jbr",
     "benchmarking"
   ],
@@ -68,7 +65,6 @@
     "@types/fs-extra": "^9.0.11",
     "@types/yargs": "^17.0.0",
     "fs-extra": "^10.0.0",
-    "solidbench": "^1.6.1",
     "sparql-benchmark-runner": "^4.2.0"
   }
 }
