--- a/.componentsjs-generator-config.json
+++ b/.componentsjs-generator-config.json
@@ -7,6 +7,7 @@
     "DockerContainerHandler",
     "DockerNetworkCreator",
     "DockerNetworkHandler",
+    "DockerNetworkInspector",
     "DockerImageBuilder",
     "DockerImagePuller",
     "ITaskContext",
